grafana endpoint ready, serverTime
